[tool.poetry]
name = "mig3"
version = "1.2.0"
description = "Detect regressions in your python3 migration!"
authors = ["Matthew de Verteuil <mverteuil@users.noreply.github.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
barbara = "*"
dj-database-url = "*"
django = "*"
django-choices-enum = {git = "https://github.com/NewVadim/django-choices-enum.git",ref = "0.3"}
django-extensions = "*"
django-fsm = "*"
django-hashid-field = "*"
django-model-utils = "*"
django-webpack-loader = "*"
djangorestframework = "*"
gitpython = "*"
psycopg2-binary = "*"
python-dotenv = "*"
django-cors-headers = "*"
gunicorn = "*"
django-heroku = "*"

[tool.poetry.dev-dependencies]
graphviz = "*"
isort = "*"
pytest = "*"
pytest-cov = "*"
pytest-datadir = "*"
pytest-django = "*"
model_bakery = "*"

[tool.black]
line-length = 120
target-version = ['py37']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | (?!\d{4}_).*\.py
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)/
'''

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
known_django = "django"
known_pandas = "pandas,numpy"
known_third_party = ["dj_database_url", "django", "django_choices_enum", "django_fsm", "django_heroku", "dotenv", "git", "hashid_field", "model_bakery", "model_utils", "pytest", "rest_framework", "webpack_loader", "whitenoise"]
line_length = 120
multi_line_output = 3
no_lines_before = "LOCALFOLDER"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,PANDAS,FIRSTPARTY,LOCALFOLDER"
use_parentheses = true
verbose = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[[source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[requires]
python_version = "3.7"
